--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -21,6 +21,26 @@ a:hover {
     color: orangered;
 }
 
+button {
+    font: 1.6rem arial;
+    padding: 1rem;
+    border: 0.1rem #808080 solid;
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
+
+button:hover {
+    border: 0.1rem #404040 solid;
+}
+
+button.primary {
+    background-color: #f0c040;
+}
+
+.fw {
+    width: 100%;
+}
+
 .grid-container {
     display: grid;
     grid-template-areas: 
@@ -113,4 +133,49 @@ footer {
 
 .rating span:last-child {
     color: black;
+}
+
+/* Product Details */
+.content {
+    padding: 1rem;
+}
+
+.details {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.details ul {
+    list-style: none;
+    padding: 0;
+}
+
+.details li {
+    margin-bottom: 1rem;
+}
+.details-image {
+    flex: 2 1 60rem;
+}
+
+.details-image .img {
+    max-width: 60rem;
+    width: 100%;
+}
+
+.details-info, .details-action {
+    flex: 1 1 30rem;
+}
+
+.details-info h1 {
+    font-size: 2rem;
+    margin: 0;
+}
+
+.details-action {
+    border: 0.1rem #808080 solid;
+    border-radius: 0.5rem;
+    background-color: #f8f8f8;
+    padding: 1rem;
 }
