--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -179,3 +179,79 @@ footer {
     background-color: #f8f8f8;
     padding: 1rem;
 }
+
+.success {
+    color: green;
+}
+
+.error {
+    color: red;
+}
+
+/* Cart Screen */
+.cart {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-around; */
+    align-items: flex-start;
+}
+
+.cart-list {
+    flex: 3 1 60rem;
+}
+
+.cart-action {
+    flex: 1 1 20rem;
+    background-color: #f0f0f0;
+    border: 0.1rem solid black;
+    border-radius: 0.5rem;
+    padding: 1rem;
+}
+
+.cart-list-container {
+    padding: 1rem;
+    list-style-type: none;
+}
+
+.cart-list-container li {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    border-bottom: 0.1rem #c0c0c0 solid;
+}
+
+.cart-list-container img {
+    max-width: 10rem;
+    max-height: 10rem;
+}
+
+.cart-list-container li:first-child {
+    align-items: flex-end;
+}
+
+.cart-image {
+    flex: 1 1;
+}
+
+.cart-name {
+    flex: 8 1;
+}
+
+cart-price {
+    flex: 1 1;
+    text-align: right;
+}
+
+.cart-name div {
+    padding: 1rem;
+}
+
+.cart-list h3 {
+    margin: 0;
+}
+
+.cart-list select, .cart-list button {
+    font-size: 1.3rem;
+    padding: 0.5rem;
+}
