--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -21,14 +21,19 @@ a:hover {
     color: orangered;
 }
 
+input,
 button {
     font: 1.6rem arial;
     padding: 1rem;
     border: 0.1rem #808080 solid;
     border-radius: 0.5rem;
+}
+
+button {
     cursor: pointer;
 }
 
+input:hover,
 button:hover {
     border: 0.1rem #404040 solid;
 }
@@ -254,4 +259,61 @@ cart-price {
 .cart-list select, .cart-list button {
     font-size: 1.3rem;
     padding: 0.5rem;
+}
+
+/* Form */
+.form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.form-items {
+    display: flex;
+    flex-direction: column;
+    width: 32rem;
+    padding: 2rem;
+    border: 0.1rem solid grey;
+    border-radius: 0.5rem;
+    list-style-type: none;
+}
+
+.form-items li {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(16, 16, 16, 0.5);
+}
+
+.overlay.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.overlay > div {
+    background-color: white;
+    color: black;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    max-width: 40rem;
+}
+
+.overlay > div > * {
+    margin: 2rem;
 }
