--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -265,7 +265,7 @@ cart-price {
 .form-container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     height: 100%;
 }
 
@@ -316,4 +316,68 @@ cart-price {
 
 .overlay > div > * {
     margin: 2rem;
+}
+
+/* Checkout */
+.checkout-steps {
+    display: flex;
+    justify-content: space-between;
+    width: 40rem;
+    margin: 1rem auto;
+}
+
+.checkout-steps > div {
+    border-top: 0.3rem solid grey;
+    flex: 1 1;
+}
+.checkout-steps > div.active {
+    border-top-color: #f08000;
+    color: #f08000
+}
+
+/* PlaceOrder Screen */
+.order {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
+    justify-content: space-between;
+}
+
+.order-info {
+    flex: 3 1 60rem;
+}
+
+.order-action {
+    flex: 1 1 20rem;
+    border: 00.1rem solid #c0c0c0;
+    border-radius: 0.5rem;
+    background-color: #f0f0f0;
+    padding: 2rem;
+    margin: 1rem;
+    /* height: fit-content; */
+}
+
+.order-info > div {
+    border: 0.1rem solid #c0c0c0;
+    border-radius: 0.5rem;
+    padding: 2rem;
+    margin: 1rem;
+    background-color: #f0f0f0;
+}
+
+.order-action > ul {
+    padding: 0;
+    list-style-type: none;
+}
+
+.order-action  li {
+    display: flex;
+    margin-bottom: 1rem;
+    justify-content: space-between;
+}
+
+.order-action .total {
+    font-size: 2rem;
+    font-weight: bold;
+    color: orangered;
 }
