--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -365,6 +365,10 @@ cart-price {
     background-color: #f0f0f0;
 }
 
+/* .order-info > div > div {
+    padding-bottom: 1rem;
+} */
+
 .order-action > ul {
     padding: 0;
     list-style-type: none;
