simulate payment doen

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -46,6 +46,10 @@ button.primary {
     width: 100%;
 }
 
+.hidden {
+    display: none;
+}
+
 .grid-container {
     display: grid;
     grid-template-areas: 
